# UpBankFFImporter

./: .gitignore  AUTHORS.md  Cargo.toml  Docker-Compose.yml  Dockerfile  README.md  settings-template.yaml
.github/workflows/: docker-image.yml  rust.yml
config/: settings-template.yaml
src/: Mapper.rs  config.rs  main.rs  mapper.rs  operation.rs
src/fire_fly/: accounts.rs  general.rs  mod.rs  transaction.rs
src/migrator/: account_map.rs  mod.rs  transaction_map.rs  transaction_tracker.rs
src/up_bank/: accounts.rs  categories.rs  general.rs  mod.rs  pagination.rs  tags.rs  transactions.rs
