[package]
name = "up_bank_fidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
clap = {version="3.2", features = ["derive", "env"]}
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
chrono = "0.4"
csv = "1.1"